--- a/debezium-parent/pom.xml
+++ b/debezium-parent/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>io.debezium</groupId>
     <artifactId>debezium-build-parent</artifactId>
-    <version>1.5.4.Final</version>
+    <version>ne-1.5.4-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
